unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/Fintrax_API_Auth_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Fintrax API Auth Details</label>
</CustomObject>