unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <label>audience</label>
    <length>250</length>
    <type>Text</type>
</CustomField>