unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <length>250</length>
    <type>Text</type>
</CustomField>