unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/fields/connection__c.field-meta.xml
<CustomField>
    <fullName>connection__c</fullName>
    <label>connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>