unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/fields/grant_type__c.field-meta.xml
<CustomField>
    <fullName>grant_type__c</fullName>
    <label>grant_type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>