unpackaged/main/default/objects/Fintrax_API_Auth_Details__c/fields/ocp_apim_subscription_key__c.field-meta.xml
<CustomField>
    <fullName>ocp_apim_subscription_key__c</fullName>
    <label>ocp-apim-subscription-key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>